# kor-mark-search

./: .gitignore  README.md  README_kr.md  config.py  index_builder.py  index_search.py  main.py  markdown_utils.py  pyproject.toml  string_group.py  unicode_converter.py
kor_mark_search/: index_search.py
